Work on album display. Fix fave on dynamic gid (both action and alignment).

--- a/app/assets/stylesheets/album_display.css
+++ b/app/assets/stylesheets/album_display.css
@@ -12,6 +12,7 @@ body.display{
 
 .fave_options{
     display: none;
+    z-index: 1000;
 }
 
 li.image_container:hover .fave_options{
