--- a/app/assets/stylesheets/albums.css.scss
+++ b/app/assets/stylesheets/albums.css.scss
@@ -119,11 +119,11 @@ a.btn {
 		opacity: .5;
 	}
 
-	.fave_heart{
-		margin-top: 30px;
-		margin-left: 10px;
-		margin-bottom: 20px;
-	}
+	//.fave_heart{
+	//	margin-top: 30px;
+	//	margin-left: 10px;
+	//	margin-bottom: 20px;
+	//}
 }
 
 .image_container{
@@ -136,15 +136,18 @@ a.btn {
 		width: 0;
 		height: 0; 
 		border-bottom: 35px solid $red; 
-		border-right: 35px solid transparent; 
+		border-right: 35px solid transparent;
 		color: $white;
 		cursor: pointer;
 		.fave_heart{
+            img{
+              padding-left: 3px;
+            }
             //margin-top: 30px;
             //margin-left: 10px;
             //margin-bottom: 20px;
 			p{
-				margin: -20px 20px 0px 0px;
+				//margin: -20px 20px 0px 0px;
 				a{
 					color: $white;
 					text-decoration: none;
@@ -164,11 +167,13 @@ a.btn {
 		width: 35px;
 		height: 35px;
 		border-radius: 50%;
-		opacity: .5;
-		text-align: center;
+        opacity: 0.75;
 		font-size: 15px;
 		p{
 			margin-top: 10px;
+            padding-right: 7px;
+            color: white;
+            font-family: 'GothamMedium';
 		}
 	}
 }
