--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -421,7 +421,7 @@ input[type="email"],input[type="password"]{
 .small-heart{
   width: 15px !important;
   margin-top: 17px;
-  margin-left: -4px !important;
+  //margin-left: -4px !important;
 }
 
 .fancyInput input, textarea {
